--- a/css/controls.css
+++ b/css/controls.css
@@ -1,13 +1,14 @@
 .button {
-  display: inline-block;
-  padding: 5px 15px;
-  text-align: center;
-  text-decoration: none;
-  background-color: var(--accent-color);
-  border-radius: 5px;
-  color: var(--text-color);
-}
+    display: inline-block;
+    background-color: var(--secondary-background-color);
+    padding: 5px 15px; 
+    text-align: center;
+    text-decoration: none;
+    border-radius: 5px;
+    color: var(--primary-text-color);
+    border: 1px solid var(--border-color);
+} 
 
-.button:hover {
+/* .button:hover {
     cursor: pointer;
-}
+}  */
