--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,7 @@
 @import "global.css";
 @import "controls.css";
 @import "index.header.css";
-@import "index.products.css";
+@import "index.products.css"; 
+@import "footer.products.css"; 
+
 
